@@ -2,9 +2,9 @@
 libc_MIN_KERNEL_SUPPORTED = 2.6.0
 libc_add-ons = nptl $(add-ons)
 libc_extra_cflags = -O3 -g1
-slibdir = /lib
-libdir = /usr/lib
-rtlddir = /lib64
+libc_slibdir = /lib
+libc_libdir = /usr/lib
+libc_rtlddir = /lib64
 
 # /lib64 and /usr/lib64 are provided by glibc instead base-files: #259302.
 define libc6_extra_pkg_install
