@@ -1,6 +1,8 @@
 glibc (2.3.6-3) UNRELEASED; urgency=low
 
-  * 
+  [ Aurelien Jarno]
+  * Use a shell function instead of ifneq when testing a variable depending on
+    $(curpass), otherwise it is only evaluated at the first pass.
 
  -- Aurelien Jarno <aurel32@debian.org>  Thu, 23 Feb 2006 21:46:25 +0100
 
